<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zjucompass.zjucampus3.FeedBackActivity">

    <ProgressBar
        android:id="@+id/progress_feedback"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/feedback_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ececec">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/feedback_content"
                android:inputType="textMultiLine"
                android:hint="@string/feedback_hint"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="#ffffff"/>
            <TextView
                android:layout_below="@id/feedback_content"
                android:layout_alignLeft="@id/feedback_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_prompt"
                android:padding="10dp"
                android:textColor="@color/blue"
                android:id="@+id/contact_prompt"/>
            <EditText
                android:id="@+id/feedback_email"
                android:inputType="textEmailAddress"
                android:layout_below="@id/contact_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="10dp"
                android:hint="@string/email_hint"
                android:background="#ffffff"
                />
            <EditText
                android:id="@+id/feedback_phone"
                android:inputType="phone"
                android:layout_below="@id/feedback_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:hint="@string/phone_hint"
                android:background="#ffffff"
                />

            <Button
                android:layout_below="@id/feedback_phone"
                android:id="@+id/submit_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/submit"
                android:background="@drawable/button_selector"
                android:textColor="#fff"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
